--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pwa-test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nemutas.github.io/pwa_test/",
+  "homepage": "https://shomffl.github.io/pwa-test/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
